--- a/tema06/css9.css
+++ b/tema06/css9.css
@@ -1,15 +1,15 @@
 .contenedor {
     display: flex;
+    justify-content: center; 
+    align-items: flex-start; 
+    /* flex-flow: row; */ 
     flex-direction: row;
-    flex-wrap: wrap;
-    width: 800px;
 }
 
 .contenedor div {
     display: flex;
     color: white;
     width: 8vw;
-    height: 6vh;
     justify-content: center;
     padding: 10px;
 }
@@ -25,6 +25,7 @@
 }
 #elemento4 {
     background-color: rgb(42, 42, 160);
+    flex-grow: 1;
 }
 #elemento5 {
     background-color: rgb(26, 26, 139);
@@ -35,3 +36,5 @@
 #elemento7 {
     background-color: rgb(36, 36, 112);
 }
+
+
