--- a/tema06/actividad6/Ejemplo CSS Responsive Tabs con Flexbox/css/miestilo.css
+++ b/tema06/actividad6/Ejemplo CSS Responsive Tabs con Flexbox/css/miestilo.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: crimson;
+    background-color: #4169e2;
     width: 90%;
     margin: 20px auto;
     margin-bottom: 0px;
@@ -82,7 +82,8 @@ header h1 {
 #tab-uno:checked~.tabs #tab-uno-label,
 #tab-dos:checked~.tabs #tab-dos-label,
 #tab-tres:checked~.tabs #tab-tres-label,
-#tab-cuatro:checked~.tabs #tab-cuatro-label {
+#tab-cuatro:checked~.tabs #tab-cuatro-label,
+#tab-cinco:checked~.tabs #tab-cinco-label {
     background-color: #fff;
     cursor: default;
     border-left-color: crimson;
@@ -95,8 +96,16 @@ header h1 {
 #tab-uno:checked~.tabs #tab-uno-panel,
 #tab-dos:checked~.tabs #tab-dos-panel,
 #tab-tres:checked~.tabs #tab-tres-panel,
-#tab-cuatro:checked~.tabs #tab-cuatro-panel {
+#tab-cuatro:checked~.tabs #tab-cuatro-panel,
+#tab-cinco:checked~.tabs #tab-cinco-panel {
     display: block;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #4169e2;
+    color: white;
 }
 
 /* Configuración de vista Responsive */
@@ -136,6 +145,10 @@ header h1 {
         order: 7;
     }
 
+    .flex-tabs #tab-cinco-label {
+        order: 9;
+    }
+
     .flex-tabs #tab-uno-panel {
         order: 2;
     }
@@ -151,18 +164,23 @@ header h1 {
     .flex-tabs #tab-cuatro-panel {
         order: 8;
     }
+    .flex-tabs #tab-cinco-panel {
+        order: 10;
+    }
 
     #tab-uno:checked~.tabs #tab-uno-label,
     #tab-dos:checked~.tabs #tab-dos-label,
     #tab-tres:checked~.tabs #tab-tres-label,
-    #tab-cuatro:checked~.tabs #tab-cuatro-label {
+    #tab-cuatro:checked~.tabs #tab-cuatro-label,
+    #tab-cinco:checked~.tabs #tab-cinco-label {
         border-bottom: none;
     }
 
     #tab-uno:checked~.tabs #tab-uno-panel,
     #tab-dos:checked~.tabs #tab-dos-panel,
     #tab-tres:checked~.tabs #tab-tres-panel,
-    #tab-cuatro:checked~.tabs #tab-cuatro-panel {
+    #tab-cuatro:checked~.tabs #tab-cuatro-panel,
+    #tab-cinco:checked~.tabs #tab-cinco-panel {
         border-bottom: 1px solid #ccc;
     }
 
