--- a/proyecto2/css/SNProyecto.css
+++ b/proyecto2/css/SNProyecto.css
@@ -5,3 +5,20 @@
 i {
     color: black;
 }
+
+.list-group-item.active {
+    color: black; 
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
+
+.list-group-item+.list-group-item.active {
+    margin-top: 0; 
+    border-top-width: 0; 
+
+    border-radius: 0 4px 0 0;
+}
+
+.list-group-item:last-child:hover {
+    background-color: #f8f9fa;;
+}
