--- a/proyecto2/css/login.css
+++ b/proyecto2/css/login.css
@@ -9,6 +9,36 @@ main {
     flex: 1; /* Hace que el elemento principal tome todo el espacio restante, empujando el pie de página hacia abajo. */
 }
 
+.formulario {
+    background: linear-gradient(270deg, #a3a3a3, #f3ee00);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 17s ease infinite;
+    -moz-animation: AnimationName 17s ease infinite;
+    -o-animation: AnimationName 17s ease infinite;
+    animation: AnimationName 17s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
 .footer {
     flex-shrink: 0; /* Evita que el pie de página se encoja cuando hay poco contenido. */
 }
