--- a/proyecto2/css/tienda.css
+++ b/proyecto2/css/tienda.css
@@ -2,19 +2,28 @@ body {
     display: flex;
     background-color: lightgray;
     flex-direction: column;
-    min-height: 100vh; /* Establece la altura mínima del cuerpo como el 100% de la altura de la ventana. */
+    min-height: 100vh;
 }
 
 main {
-    flex: 1; /* Hace que el elemento principal tome todo el espacio restante, empujando el pie de página hacia abajo. */
+    flex: 1;
 }
 
 .footer {
-    flex-shrink: 0; /* Evita que el pie de página se encoja cuando hay poco contenido. */
+    flex-shrink: 0;
 }
+
 
 .card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: cover;
 }
+
+.card-body {
+    text-align: center; /* Centra el contenido en la tarjeta */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra verticalmente el contenido */
+}
+
